shelf: Update overflow bubble when enter exit tablet mode.

Depending on if we start in tablet or clamshell, there can either be a
shelf item shown on neither shelf, or a shelf item shown on both shelfs.

Test: added test
Bug: 863169
Change-Id: Id99c3f270d49db8acea535b689576c3de077ea0c
Reviewed-on: https://chromium-review.googlesource.com/1135751
Commit-Queue: Sammie Quon <sammiequon@chromium.org>
Reviewed-by: Michael Wasserman <msw@chromium.org>
Cr-Commit-Position: refs/heads/master@{#575137}